Fix issues with sponsors slideshow on smaller screens (again) #69

--- a/assets/stylesheets/layout.scss
+++ b/assets/stylesheets/layout.scss
@@ -174,23 +174,52 @@ section {
   h3 {
     color: #999;
   }
-  hr {
-    margin: 0;
-  }
-  .slide + hr {
-    margin-top: -16px;
-  }
   .carousel {
     max-height: 300px;
+    border-bottom: 1px solid #eee;
+    border-top: 1px solid #eee;
     .carousel-inner {
       h3, h2 {
         text-align: center;
+      }
+      .item {
+        .row div {
+          height: 140px !important;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          a {
+            width: 100%;
+          }
+        }
+        img {
+          margin-top: -10px;
+          margin-bottom: 10px;
+          margin-left: auto;
+          margin-right: auto;
+          vertical-align: middle;
+          &.amazon {
+          }
+          &.appfolio {
+          }
+          &.planningcenter {
+          }
+          &.learn {
+            max-height: 100px;
+          }
+          &.procore {
+          }
+          &.sdruby {
+            margin-top: -20px;
+          }
+        }
       }
     }
     .carousel-control {
       opacity: 1;
       &.left, &.right {
          background-image: none;
+         margin-top: 40px;
       }
       i {
         color: $peach;
@@ -199,26 +228,12 @@ section {
           color: $red;
         }
       }
-    }
-  }
-  img {
-    max-height: 130px;
-    margin-left: auto;
-    margin-right: auto;
-    &.amazon {
-    }
-    &.learn {
-    }
-    &.procore {
-      margin-top: 2.5vw;
-    }
-    &.appfolio {
-      margin-top: 1.1vw;
-    }
-    &.planningcenter {
-    }
-    &.sdruby {
-      margin-top: 2.2vw;
+      .glyphicon-chevron-left {
+        left: 20% !important;
+      }
+      .glyphicon-chevron-right {
+        right: 20% !important;
+      }
     }
   }
 }
